packages/ag-grid-theme/css/parts/ag-body.css
/* ... */
/* CELL */

.ag-theme-salt-light .ag-cell.ag-cell-last-left-pinned:not(.ag-cell-range-right):not(.ag-cell-range-single-cell),
.ag-theme-salt-dark .ag-cell.ag-cell-last-left-pinned:not(.ag-cell-range-right):not(.ag-cell-range-single-cell),
.ag-theme-salt-compact-light .ag-cell.ag-cell-last-left-pinned:not(.ag-cell-range-right):not(.ag-cell-range-single-cell),
.ag-theme-salt-compact-dark .ag-cell.ag-cell-last-left-pinned:not(.ag-cell-range-right):not(.ag-cell-range-single-cell) {
  border-right-color: var(--salt-separable-secondary-borderColor);
}

.ag-theme-salt-light .ag-cell.ag-cell-first-right-pinned:not(.ag-cell-range-left):not(.ag-cell-range-single-cell),
.ag-theme-salt-dark .ag-cell.ag-cell-first-right-pinned:not(.ag-cell-range-left):not(.ag-cell-range-single-cell),
.ag-theme-salt-compact-light .ag-cell.ag-cell-first-right-pinned:not(.ag-cell-range-left):not(.ag-cell-range-single-cell),
.ag-theme-salt-compact-dark .ag-cell.ag-cell-first-right-pinned:not(.ag-cell-range-left):not(.ag-cell-range-single-cell) {
  border-left-color: var(--salt-separable-secondary-borderColor);
}

.ag-theme-salt-light .ag-cell,
.ag-theme-salt-dark .ag-cell,
.ag-theme-salt-compact-light .ag-cell,
.ag-theme-salt-compact-dark .ag-cell {
  border: none;
  line-height: calc(var(--ag-line-height) - 1px);
  padding-left: var(--salt-spacing-100);
  padding-right: var(--salt-spacing-100);
}

/* This is not restricted to `.editable-cell`, so any custom editor would get the same background treatment */
.ag-theme-salt-light .ag-cell-inline-editing:focus-within,
.ag-theme-salt-dark .ag-cell-inline-editing:focus-within,
.ag-theme-salt-compact-light .ag-cell-inline-editing:focus-within,
.ag-theme-salt-compact-dark .ag-cell-inline-editing:focus-within {
  background: var(--salt-container-primary-background);
}

/* This makes sure custom cell editor would start from no padding. Built-in ag grid editor's padding is added below. */
.ag-theme-salt-light .ag-cell-inline-editing,
.ag-theme-salt-dark .ag-cell-inline-editing,
.ag-theme-salt-compact-light .ag-cell-inline-editing,
.ag-theme-salt-compact-dark .ag-cell-inline-editing {
  padding: 0;
  /* When styling option corner='rounded', we don't want this to be flipped between rounded and not between editing and normal state */
  border-radius: 0;
}

.ag-theme-salt-light .ag-cell-inline-editing.editable-cell input[class^="ag-"],
.ag-theme-salt-dark .ag-cell-inline-editing.editable-cell input[class^="ag-"],
.ag-theme-salt-compact-light .ag-cell-inline-editing.editable-cell input[class^="ag-"],
.ag-theme-salt-compact-dark .ag-cell-inline-editing.editable-cell input[class^="ag-"] {
  padding: 0 var(--salt-spacing-100);
}

.ag-theme-salt-light .editable-cell,
.ag-theme-salt-light .editable-numeric-cell,
.ag-theme-salt-dark .editable-cell,
.ag-theme-salt-dark .editable-numeric-cell,
.ag-theme-salt-compact-light .editable-cell,
.ag-theme-salt-compact-light .editable-numeric-cell,
.ag-theme-salt-compact-dark .editable-cell,
.ag-theme-salt-compact-dark .editable-numeric-cell {
  outline: var(--salt-size-border) var(--salt-container-borderStyle) var(--salt-editable-borderColor);
  outline-offset: -1px;
}

.ag-theme-salt-light .ag-cell.numeric-cell,
.ag-theme-salt-light .editable-numeric-cell,
.ag-theme-salt-dark .ag-cell.numeric-cell,
.ag-theme-salt-dark .editable-numeric-cell,
.ag-theme-salt-compact-light .ag-cell.numeric-cell,
.ag-theme-salt-compact-light .editable-numeric-cell,
.ag-theme-salt-compact-dark .ag-cell.numeric-cell,
.ag-theme-salt-compact-dark .editable-numeric-cell {
  text-align: right;
}

/* Special case when user finish editing and click out side of the grid. */
.ag-theme-salt-light .ag-cell.numeric-cell.ag-cell-inline-editing .ag-cell-editor input:not(:focus),
.ag-theme-salt-dark .ag-cell.numeric-cell.ag-cell-inline-editing .ag-cell-editor input:not(:focus),
.ag-theme-salt-compact-light .ag-cell.numeric-cell.ag-cell-inline-editing .ag-cell-editor input:not(:focus),
.ag-theme-salt-compact-dark .ag-cell.numeric-cell.ag-cell-inline-editing .ag-cell-editor input:not(:focus) {
  text-align: right;
}

.ag-theme-salt-light .ag-ltr .ag-cell-focus:not(.ag-cell-range-selected):focus-within,
.ag-theme-salt-dark .ag-ltr .ag-cell-focus:not(.ag-cell-range-selected):focus-within,
.ag-theme-salt-compact-light .ag-ltr .ag-cell-focus:not(.ag-cell-range-selected):focus-within,
.ag-theme-salt-compact-dark .ag-ltr .ag-cell-focus:not(.ag-cell-range-selected):focus-within,
.ag-theme-salt-light .ag-ltr .ag-context-menu-open .ag-cell-focus:not(.ag-cell-range-selected),
.ag-theme-salt-dark .ag-ltr .ag-context-menu-open .ag-cell-focus:not(.ag-cell-range-selected),
.ag-theme-salt-compact-light .ag-ltr .ag-context-menu-open .ag-cell-focus:not(.ag-cell-range-selected),
.ag-theme-salt-compact-dark .ag-ltr .ag-context-menu-open .ag-cell-focus:not(.ag-cell-range-selected),
.ag-theme-salt-light .ag-ltr .ag-full-width-row.ag-row-focus:focus .ag-cell-wrapper.ag-row-group,
.ag-theme-salt-dark .ag-ltr .ag-full-width-row.ag-row-focus:focus .ag-cell-wrapper.ag-row-group,
.ag-theme-salt-compact-light .ag-ltr .ag-full-width-row.ag-row-focus:focus .ag-cell-wrapper.ag-row-group,
.ag-theme-salt-compact-dark .ag-ltr .ag-full-width-row.ag-row-focus:focus .ag-cell-wrapper.ag-row-group,
.ag-theme-salt-light .ag-ltr .ag-cell-range-single-cell,
.ag-theme-salt-dark .ag-ltr .ag-cell-range-single-cell,
.ag-theme-salt-compact-light .ag-ltr .ag-cell-range-single-cell,
.ag-theme-salt-compact-dark .ag-ltr .ag-cell-range-single-cell,
.ag-theme-salt-light .ag-ltr .ag-cell-range-single-cell.ag-cell-range-handle,
.ag-theme-salt-dark .ag-ltr .ag-cell-range-single-cell.ag-cell-range-handle,
.ag-theme-salt-compact-light .ag-ltr .ag-cell-range-single-cell.ag-cell-range-handle,
.ag-theme-salt-compact-dark .ag-ltr .ag-cell-range-single-cell.ag-cell-range-handle {
  outline: var(--salt-focused-outlineWidth) var(--salt-focused-outlineStyle) var(--salt-focused-outlineColor);
  outline-offset: -2px;
  border-width: 0;
}
/* ... */

